# docs/swagger.json
@@ -20,6 +20,14 @@
                 "tags": [
                     "users"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search by name",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "string",
@@ -32,6 +40,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Token": []
+                    }
+                ],
                 "description": "list all users",
                 "consumes": [
                     "application/json"
@@ -60,6 +73,13 @@
                     }
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Token": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
